# optional-dependency

./: Cargo.toml  justfile
src/: lib.rs
