[package]
name    = "optional-dependency"
version = "0.1.0"
authors = ["Casey Rodarmor <casey@rodarmor.com>"]
edition = "2018"

[dependencies]
serde_ = { version = "^1.0", optional = true, package = "serde" }
serde_bytes = {version = "^0.11.3", optional = true }

[dev-dependencies]
serde_ = { version = "^1.0", features = ["derive"] , package = "serde" }

[features]
serde = ["serde_", "serde_bytes"]
